# BiBiT

./: .dockerignore  .gitignore  DATABASE_RECOVERY_GUIDE.md  Dockerfile.API  Dockerfile.crawler  Makefile  Pipfile  README.md  YOGYA_TEST_GUIDE.md  claude.md  config.py  gen-analytic.py  hotdeals.json  incremental_recovery.py  main.py  models.json  notifier.py  pyproject.toml  requirements.txt  scrapper.py  test_yogya_scraper.py  versions.json
.context/: function.md  standard.md  technology.md  yogya-online-scraper-update-2025-11-13.md
.context/plan/: 843h-2025-11-11-klikindomaret-scraping-analysis.md  96g2-2025-11-11-CRITICAL-BOT-DETECTION-ISSUE.md  96g2-2025-11-11-klikindomaret-api-scraping.md  96g2-2025-11-12-python-upgrade-cloudscraper-integration.md
.github/workflows/: api-image-builder.yml  crawler-image-builder copy.yml  crawler-image-builder.yml  deploy.yml  main-yml.old  main.yml  unit-test.yml
doc/: KLIKINDOMARET_SCRAPPER_HOW_IT_WORK.md
models/: alfacart-catalog.json  analytics-model.json  models.json
script-collection/: debug_extraction.py  debug_html.py  test_load_more.py  test_yogya_scraper.py
src/: alfacart.py  alfagift.py  analytics.py  config.py  db.py  discordhook.py  gen-analytic.py  indomaret.py  klikindomaret.py  main.py  models.py  notifier.py  util.py  yogyaonline.py
src/api_client/: __init__.py  klikindomaret_api.py  test_api_structure.py  test_data_type.py  test_products.py
src/crawler/: alfacart.py  alfagift.py  klikindomaret.py  klikindomaret_old.py  yogyaonline.py  yogyaonline_old.py  yogyaonline_old_pagination.py
(+7 files in other folders)
